# shorter

./: .gitignore  Cargo.toml  README.md  storage.json
src/: hash.rs  main.rs  storage.rs
