[package]
name = "shorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.7", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde_json = "1.0.64"
md5 = "0.7.0"
base-62 = "0.1.1"
